--- a/templates/admin_scraper.html
+++ b/templates/admin_scraper.html
@@ -19,6 +19,8 @@
             <i class="bi bi-download"></i> Fetch New Challenges
         </button>
 
+    <button id="claimBadges">Claim badges</button>
+
         <div id="loading" class="mt-3" style="display: none;">
             <span class="spinner-border spinner-border-sm"></span> Fetching...
         </div>
