--- a/templates/java_code_analysis.html
+++ b/templates/java_code_analysis.html
@@ -260,7 +260,7 @@
                         <canvas id="severityChart" width="400" height="400" ></canvas>
                     </div>
                     <div class="text-center mt-3">
-                        <a href="{% url 'export_excel' %}" class="btn btn-success">
+                        <a href="{% url 'export_java_excel' %}" class="btn btn-success">
                             <i class="fas fa-file-excel"></i> Download Excel Report
                         </a>
                     </div>
